Fixing header spacing issue

--- a/OathsStyle.css
+++ b/OathsStyle.css
@@ -1,4 +1,4 @@
-.Header {
+.header {
     position: sticky;
     top: 0;
     padding: 0px 0px;
